[gd_scene load_steps=2 format=2]

[ext_resource path="res://managers/AudioManager.gd" type="Script" id=1]

[node name="AudioManager" type="Node"]
script = ExtResource( 1 )

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="AmbiancePlayer" type="AudioStreamPlayer" parent="."]
bus = "Ambient"
